# wasmCloud-host

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dagger.json
.dagger/: build.go  go.mod  go.sum  main.go  version.go
.github/workflows/: publish-runtime.yml
crates/plugins/surrealdb/: Cargo.toml
crates/plugins/surrealdb/src/: config.rs  host.rs  lib.rs  observability.rs  streams.rs
crates/plugins/surrealdb/tests/: integration.rs
crates/plugins/surrealdb/wit/: world.wit
crates/runtime/: Cargo.toml
crates/runtime/src/: main.rs
