[workspace]
resolver = "3"
members = ["crates/plugins/surrealdb/", "crates/runtime/"]

[workspace.package]
version = "2.0.1"
edition = "2024"
rust-version = "1.95.0"
repository = "https://github.com/Seamlezz/wasmCloud-host"
license = "Unlicense"

[workspace.dependencies]
anyhow = { version = "1", default-features = false }
async-nats = {
  version = "0.47",
  default-features = false,
  features = [
    "aws-lc-rs",
    "jetstream",
    "kv",
    "nkeys",
    "object-store",
    "service"
  ]
}
async-trait = { version = "0.1", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false }
humantime = { version = "2" }
surrealdb = {
  version = "3",
  default-features = false,
  features = ["kv-mem", "protocol-http", "protocol-ws", "rustls"]
}
surrealdb-host-adapter = "0.7"
surrealdb-types = "3"
tokio = { version = "1", default-features = false, features = ["full"] }
tracing = {
  version = "0.1",
  default-features = false,
  features = ["attributes"]
}
tracing-subscriber = {
  version = "0.3",
  default-features = false,
  features = ["env-filter", "fmt"]
}
# wash-runtime 2.x is not on crates.io yet (upstream publish = false). Pin to release tag.
wash-runtime = {
  git = "https://github.com/wasmCloud/wasmCloud",
  # tag = "v2.4.0"
  branch = "main",
  default-features = false,
  features = [
    "washlet",
    "wasi-blobstore",
    "wasi-config",
    "wasi-keyvalue",
    "wasi-logging",
    "wasi-otel",
    "wasm_component_model_implements",
  ]
}
wasmcloud-plugin-surrealdb = { path = "crates/plugins/surrealdb" }
wasmtime = {
  git = "https://github.com/bytecodealliance/wasmtime",
  rev = "7535c0255b2b84f6ae4de6034649ba2eeda84173",
  default-features = false,
  features = [
    "component-model",
    "component-model-async",
  ]
}

# The wasm_component_model_implements feature requires the resource-implements
# wasmtime feature (bytecodealliance/wasmtime#13666). It merged to main (47.0.0)
# but is not on the 46 release branch. The fork backports it onto 46.
# Retire this patch when moving to wasmtime 47.
[patch."https://github.com/bytecodealliance/wasmtime"]
wasmtime = { git = "https://github.com/ricochet/wasmtime", branch = "release-46.0.0-implements" }
wasmtime-wasi = { git = "https://github.com/ricochet/wasmtime", branch = "release-46.0.0-implements" }
wasmtime-wasi-io = { git = "https://github.com/ricochet/wasmtime", branch = "release-46.0.0-implements" }
wasmtime-wasi-http = { git = "https://github.com/ricochet/wasmtime", branch = "release-46.0.0-implements" }
