[package]
name = "wasmcloud-host-runtime"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cluster-connected wasmCloud host (washlet) with SurrealDB plugin"

[[bin]]
name = "wasmcloud-host"
path = "src/main.rs"

[dependencies]
wash-runtime = { workspace = true }
wasmcloud-plugin-surrealdb = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
